# playment-sre-interview

./: .dockerignore  .gitignore  ANSWERS.md  DOCUMENTATION.md  Dockerfile  LICENSE  Makefile  docker-compose.yml
src/: Pipfile  README.md  mctl.py  pyproject.toml
