[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mctl"
version = "0.1.0"
authors = [
  { name="Byomakesh Maharana", email="author@example.com" },
]
description = "A command line utility to process messages from Queue systems"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: GNU/Linux",
]
dependencies = [
    "boto3",
    'importlib-metadata; python_version<"3.8"',
]


[project.urls]
"Homepage" = "https://github.com/byoms/playment-sre-interview"

[tool.setuptools.packages]
find = {}

[project.scripts]
mctl = "mctl.cli:main"
